# ros2_diag_tui

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yaml
config/: perseus-lite.yaml  turtlebot3.yaml  turtlebot4.yaml
launch/: ros2_diag_tui.launch.py
ros2_diag_tui/: diag_tui.py
test/: test_copyright.py  test_flake8.py  test_pep257.py
