<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_diag_tui</name>
  <version>1.0.0</version>
  <description>A curses-based TUI dashboard for real-time ROS2 robot diagnostics: topic rates, TF tree, Nav2 lifecycle, LiDAR view, and more.</description>
  <maintainer email="1388693+DingoOz@users.noreply.github.com">Nigel_H-S</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/DingoOz/ros2_diag_tui</url>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
